force-app/main/default/objects/Peak_Metadata_Deploy_Result__c.object
<CustomObject>
    <fields>
        <fullName>Detailed_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Detailed Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <label>Peak Metadata Deploy Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Peak Metadata Deploy Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Peak Metadata Deploy Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>